--- a/assests/pages/gallery.html
+++ b/assests/pages/gallery.html
@@ -59,69 +59,169 @@
 
  
   <!-- -----------------------------------------------company---------------------------------------------------------------- -->
-
+  
   <!-- ---------------------------------------------------------------------------------------------------------------------- -->
   <!-- ----------------------------------------------------team-------------------------------------------------------------- -->
   <div class="container">
-  <div class="team">
-    <span>OUR <span class="ourtm">NAVRATRI</span></span>
-  </div>
+    <div class="team">
+      <span>OUR <span class="ourtm">NAVRATRI</span></span>
+    </div>
     <div class="card"> 
       <div class="grid-img">
         <div class="column gallery">
-          <img src="/assests/img/Screenshot 2024-06-12 144519.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144922.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144201.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132022.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132045.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132139.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132206.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132312.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133844.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133858.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133922.png">
-          <img src="/assests/img/Screenshot 2024-06-12 143725.png">
-          <img src="/assests/img/Screenshot 2024-06-12 143744.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144004.png">
+          <img src="/assests/img/VDS00113.JPG">
+          <img src="/assests/img/VDS00029.JPG">
+          <img src="/assests/img/VDS00010.JPG">
+          <img src="/assests/img/VDS00014.JPG">
+          <img src="/assests/img/VDS00155.JPG">
+          <img src="/assests/img/VDS00242.JPG">
+          <img src="/assests/img/sagar.heic">
+          <img src="/assests/img/jign.heic">
+          <img src="/assests/img/grp.heic">
+          <img src="/assests/img/arti.webp">
+          <img src="/assests/img/VDS09292.JPG">
+          <img src="/assests/img/gr5.webp">
+          <img src="/assests/img/VDS09315.JPG">
+          <img src="/assests/img/VDS09342.JPG">
+          <img src="/assests/img/VDS09371.JPG">
+          <img src="/assests/img/VDS09458.JPG">
+          <img src="/assests/img/VDS09352.JPG">
+          <img src="/assests/img/VDS00996.JPG">
+          <img src="/assests/img/VDS00995.JPG">
+          <img src="/assests/img/VDS00983.JPG">
+          <img src="/assests/img/VDS00978.JPG">
+          <img src="/assests/img/VDS00978.JPG">
+          <img src="/assests/img/VDS00976.JPG">
+          <img src="/assests/img/VDS00971.JPG">
+          <img src="/assests/img/VDS00968.JPG">
+          <img src="/assests/img/VDS00967.JPG">
+          <img src="/assests/img/VDS00962.JPG">
+          <img src="/assests/img/VDS00710.JPG">
+          <img src="/assests/img/VDS00705.JPG">
+          <img src="/assests/img/VDS00702.JPG">
+          <img src="/assests/img//VDS09997.JPG">
+          <img src="/assests/img/VDS00769.JPG">
+          <img src="/assests/img/VDS00796.JPG">
+          <img src="/assests/img/VDS00891.JPG">
+          <img src="/assests/img/VDS00072.JPG">
+          <img src="/assests/img/VDS00052.JPG">
+          <img src="/assests/img/VDS00060.JPG">
         </div>
         <div class="column gallery">
-          <img src="/assests/img/Screenshot 2024-06-12 132433.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132330.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132504.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132536.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132701.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132746.png">
-          <img src="/assests/img/Screenshot 2024-06-12 132828.png">
-          <img src="/assests/img/Screenshot 2024-06-12 134017.png">
-          <img src="/assests/img/Screenshot 2024-06-12 134034.png">
-          <img src="/assests/img/Screenshot 2024-06-12 134105.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144023.png">
+          <img src="/assests/img/VDS00114.JPG">
+          <img src="/assests/img/VDS00026.JPG">
+          <img src="/assests/img/VDS00038.JPG">
+          <img src="/assests/img/VDS00017.JPG">
+          <img src="/assests/img/VDS00237.JPG">
+          <img src="/assests/img/VDS00242.JPG">
+          <img src="/assests/img/VDS00273.JPG">
+          <img src="/assests/img/sagar2.heic">
+          <img src="/assests/img/jign2.heic">
+          <img src="/assests/img/grp2.webp">
+          <img src="/assests/img/prz.jpg">
+          <img src="/assests/img/gr7.webp">
+          <img src="/assests/img/VDS09310.JPG">
+          <img src="/assests/img/VDS09316.JPG">
+          <img src="/assests/img/VDS09472.JPG">
+          <img src="/assests/img/VDS09476.JPG">
+          <img src="/assests/img/VDS09513.JPG">
+          <img src="/assests/img/VDS00696.JPG">
+          <img src="/assests/img/VDS00694.JPG">
+          <img src="/assests/img/VDS00691.JPG">
+          <img src="/assests/img/VDS00691.JPG">
+          <img src="/assests/img/VDS00686.JPG">
+          <img src="/assests/img//VDS09889.JPG">
+          <img src="/assests/img/VDS00685.JPG">
+          <img src="/assests/img/VDS00680.JPG">
+          <img src="/assests/img/VDS00675.JPG">
+          <img src="/assests/img/VDS00673.JPG">
+          <img src="/assests/img/VDS00672.JPG">
+          <img src="/assests/img/VDS00667.JPG">
+          <img src="/assests/img//VDS09993.JPG">
+          <img src="/assests/img/VDS00771.JPG">
+          <img src="/assests/img/VDS00814.JPG">
+          <img src="/assests/img/VDS00895.JPG">
+          <img src="/assests/img/VDS00714.JPG">
+          <img src="/assests/img/VDS00056.JPG">
+          <img src="/assests/img/VDS00063.JPG">
         </div>
         <div class="column gallery">
-          <img src="/assests/img/Screenshot 2024-06-12 133025.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133048.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133135.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133159.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133221.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133243.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133303.png">
-          <img src="/assests/img/Screenshot 2024-06-12 134126.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135619.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135648.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144049.png">
-          <img src="/assests/img/Screenshot 2024-06-12 144141.png">
+          <img src="/assests/img/VDS00116.JPG">
+          <img src="/assests/img/VDS00022.JPG">
+          <img src="/assests/img/VDS00041.JPG">
+          <img src="/assests/img/VDS00002.JPG">
+          <img src="/assests/img/VDS00083.JPG">
+          <img src="/assests/img/VDS00045.JPG">
+          <img src="/assests/img/VDS00238.JPG">
+          <img src="/assests/img/VDS00286.JPG">
+          <img src="/assests/img/himal.jpg">
+          <img src="/assests/img/jign3.heic">
+          <img src="/assests/img/grp3.webp">
+          <img src="/assests/img/gr3.webp">
+          <img src="/assests/img/sgr.heic">
+          <img src="/assests/img/VDS09311.JPG">
+          <img src="/assests/img/VDS09332.JPG">
+          <img src="/assests/img/VDS09475.JPG">
+          <img src="/assests/img/VDS00665.JPG">
+          <img src="/assests/img/VDS00664.JPG">
+          <img src="/assests/img/VDS00661.JPG">
+          <img src="/assests/img/VDS00659.JPG">
+          <img src="/assests/img//VDS09893.JPG">
+          <img src="/assests/img/VDS00385.JPG">
+          <img src="/assests/img/VDS00373.JPG">
+          <img src="/assests/img/VDS00370.JPG">
+          <img src="/assests/img/VDS00367.JPG">
+          <img src="/assests/img/VDS00366.JPG">
+          <img src="/assests/img/VDS00286.JPG">
+          <img src="/assests/img/VDS00273.JPG">
+          <img src="/assests/img/VDS00370.JPG">
+          <img src="/assests/img//VDS09987.JPG">
+          <img src="/assests/img/VDS00781.JPG">
+          <img src="/assests/img/VDS00816.JPG">
+          <img src="/assests/img/VDS00897.JPG">
+          <img src="/assests/img/VDS00724.JPG">
+          <img src="/assests/img/VDS00075.JPG">
+          <img src="/assests/img/VDS00058.JPG">
+          <img src="/assests/img/VDS00066.JPG">
         </div>
         <div class="column gallery">
-          <img src="/assests/img/Screenshot 2024-06-12 133405.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133505.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133546.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133627.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133658.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133734.png">
-          <img src="/assests/img/Screenshot 2024-06-12 133819.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135708.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135841.png">
-          <img src="/assests/img/Screenshot 2024-06-12 135857.png">
+          <img src="/assests/img/VDS00119.JPG">
+          <img src="/assests/img/VDS00013.JPG">
+          <img src="/assests/img/VDS00044.JPG">
+          <img src="/assests/img/VDS00035.JPG">
+          <img src="/assests/img/VDS00239.JPG">
+          <img src="/assests/img/VDS00229.JPG">
+          <img src="/assests/img/him2.jpg">
+          <img src="/assests/img/grp4.webp">
+          <img src="/assests/img/art.webp">
+          <img src="/assests/img/gr4.webp">
+          <img src="/assests/img/VDS00002.JPG">
+          <img src="/assests/img/VDS00006.JPG">
+          <img src="/assests/img/VDS00014.JPG">
+          <img src="/assests/img/VDS00017.JPG">
+          <img src="/assests/img/VDS09313.JPG">
+          <img src="/assests/img/VDS09506.JPG">
+          <img src="/assests/img/VDS09507.JPG">
+          <img src="/assests/img/VDS09475.JPG">
+          <img src="/assests/img//VDS09514.JPG">
+          <img src="/assests/img//VDS09520.JPG">
+          <img src="/assests/img//VDS09526.JPG">
+          <img src="/assests/img//VDS09529.JPG">
+          <img src="/assests/img//VDS09651.JPG">
+          <img src="/assests/img//VDS09654.JPG">
+          <img src="/assests/img//VDS09763.JPG">
+          <img src="/assests/img//VDS09864.JPG">
+          <img src="/assests/img//VDS09874.JPG">
+          <img src="/assests/img//VDS09894.JPG">
+          <img src="/assests/img//VDS09616.JPG">
+          <img src="/assests/img//VDS09621.JPG">
+          <img src="/assests/img/VDS00006.JPG">
+          <img src="/assests/img/VDS00782.JPG">
+          <img src="/assests/img/VDS00844.JPG">
+          <img src="/assests/img/VDS00720.JPG">
+          <img src="/assests/img/VDS00718.JPG">
+          <img src="/assests/img/VDS00057.JPG">
+          <img src="/assests/img/VDS00065.JPG">
         </div>
       </div>
   </div>
