--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a class="nav-link" href="/assests/pages/contact.html">CONTACTS</a>
           </li>
         </ul>
-        <a class="button type1 mb-lg-auto m-auto" href="https://www.mepass.in/events/ramzat-2024">
+        <a class="button type1 mb-lg-auto m-auto" href="/assests/pages/Booking.html">
           <span class="btn-txt">Get Pass</span>
         </a>
       </div>
@@ -76,7 +76,7 @@
     </div>
   </div>
 
-  <div class="container-background">
+  <!-- <div class="container-background">
     <div class="time-wrapper">
       <div class="time-content col-lg-8 col-md-9 col-11 p-lg-5 p-md-5 p-sm-3 p-2 rounded-5">
         <h1 class="heading">WE ARE COMING SOON</h1>
@@ -104,7 +104,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="video">
       <div class="container">
@@ -114,7 +114,7 @@
       </div>
     </div>
 
-    <div class="booking py-5">
+    <!-- <div class="booking py-5">
       <div class="container">
         <P class="heading h1">Get Your Pass Now</P>
         <div class="booking-contain d-lg-flex d-md-flex d-sm-block gap-4">
@@ -133,7 +133,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- -----------------------------------------------Gallery Carousel---------------------------------------------------------------- -->
     <div class="slider-container2 container py-4">
@@ -146,53 +146,143 @@
             aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
             aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+            aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+            aria-label="Slide 6"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+            aria-label="Slide 7"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+            aria-label="Slide 8"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row gap-0 row-gap-3 grid justify-content-center">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132022.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS09352.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132045.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00996.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132139.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00995.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132206.png" alt="First slide">
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row gap-0 row-gap-3 grid justify-content-center">
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132312.png" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132330.png" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132433.png" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132504.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00983.JPG" alt="First slide">
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row gap-0 row-gap-3 grid justify-content-center">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132536.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00978.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 134034.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00978.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 133303.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00976.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132828.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00971.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00968.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00967.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00962.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00710.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00705.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00702.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00696.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00696.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00694.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00691.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00691.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00686.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00685.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00680.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00675.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00673.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00672.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00667.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00665.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00664.JPG" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00661.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00659.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00385.JPG" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/VDS00373.JPG" alt="First slide">
               </div>
             </div>
           </div>
@@ -223,51 +313,42 @@
             aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="row gap-0 row-gap-3 grid justify-content-center">
+          <div class="carousel-item2 active">
+            <div class="row gap-0 row-gap-5 grid ">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <iframe class="rounded-4" width="410" height="250" src="https://www.youtube.com/embed/6VG0f7J8Rtc?si=k5Q_5cIA3_17qD6e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <iframe class="rounded-4" width="410" height="250" src="https://www.youtube.com/embed/TSCEhrebL0M?si=T3cXPOKmqNkDe8Ow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <iframe class="rounded-4" width="410" height="250" src="https://www.youtube.com/embed/FFOl7U2UvKQ?si=3M-1rxPr4FYGJKkC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <div class="row gap-0 row-gap-3 grid justify-content-center">
+          <div class="carousel-item2 active">
+            <div class="row gap-0 row-gap-5 grid ">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <iframe class="rounded-4" width="410" height="250" src="https://www.youtube.com/embed/Ljuq_7sWwZ4?si=aO4kTHWrtaGadTjz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <iframe class="rounded-4" width="410" height="250" src="https://www.youtube.com/embed/pfoRblQAl44?si=83WUy9T-qqlGAE6i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <iframe class="rounded-4" width="410" height="250" src="https://www.youtube.com/embed/GEydHEttG4M?si=iTbYf0LfSg-wWplY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <div class="row gap-0 row-gap-3 grid justify-content-center">
+          <div class="carousel-item2 active">
+            <div class="row gap-0 row-gap-5 grid ">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <iframe class="rounded-4" width="410" height="250" src="https://www.youtube.com/embed/nC70VrK4LUQ?si=jrrcaPWx2upx1h77" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <iframe class="rounded-4" width="410" height="250" src="https://www.youtube.com/embed/k9ESsFIXejE?si=2vmCoFW9bQ7OIwQX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+                <iframe class="rounded-4" width="410" height="250" src="https://www.youtube.com/embed/dQE5bSIcBs4?si=qYqSeN6D8GJAJlls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
